Fix drawer sticking out with long course titles

--- a/app/assets/stylesheets/drawer.css.less
+++ b/app/assets/stylesheets/drawer.css.less
@@ -31,6 +31,7 @@ aside.drawer {
     top: 0;
     height: 100vh;
     padding-top: 50px;
+    max-width: @drawer-width;
 
     z-index: 3;
 
